Add parameterized testing to reflection API
Also remove Xverify:none since it is deprecated.